--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 .top_slide{
     padding: 150px 0px 0px 0px ;
-    background-image: url(img/promo1.jpg);
+    background-image: url(https://monoprint.com.ua/images/bg/promo1.jpg);
     padding-bottom: 260px;
 }
 .top_slide div{
