--- a/css/main.css
+++ b/css/main.css
@@ -156,12 +156,17 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .specialize_cards{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px ;
+    padding-top: 20px;
     justify-content: space-evenly;
+    justify-items: center;
 }
 .top_card{
-    background-color: #E57222; 
-    background-image: url();  
+    background-color: #E57222;  
     overflow: hidden;
     border-top-left-radius:10px ;
     border-top-right-radius:10px ;
@@ -435,10 +440,14 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 @media (max-width:1300px){
     .specialize_cards{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+        
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            justify-items: center;
+            gap: 0px;
+        }
+    
     .top_container{
         width: 85%;
         margin: 0 auto;
@@ -465,6 +474,13 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         background-image: url(img/promo3.jpg);
        
     }
+}
+@media (max-width:700px) {
+    .specialize_cards{
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+    }
+    
 }
 
 @media (max-width:1130px){
