--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
 }
 .specialize_container h3{
-    font-size: 36px;
+    font-size: 40px;
     margin-top: 25px;
 
 }
@@ -288,6 +288,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     left: 43%;
     margin-top: 5px;
     margin-bottom: 5px;
+   
 }
 .bottom_serv_card{
     position: relative;
@@ -310,6 +311,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
     color: #575655;
 }
+
 
 
 /*.wraper_card{
@@ -437,6 +439,12 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
 
 }
+@media (max-width:1600px) {
+    .top_container{
+        padding-left: 15px;
+    }
+    
+}
 
 @media (max-width:1300px){
     .specialize_cards{
@@ -449,8 +457,6 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
     
     .top_container{
-        width: 85%;
-        margin: 0 auto;
         padding-left: 0px;
     }
     .top_slide{
@@ -554,7 +560,6 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         top: -100%;
         left: 0;
         width: 100%;
-        height: 37%;
         background-color: rgba(105, 105, 105, 0.87);;
         padding: 70px 10px 0px 20px;
         transition: 0.6s;
