--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   width: 100%;
   height: 100%;
   background-color: rgba(126, 126, 126, 0.808);
+  backdrop-filter: blur(3px);
   z-index: 2;
   
 }
@@ -259,7 +260,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 .services_cards{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(1, 1fr);
     grid-column-gap: 30px;
     grid-row-gap: 30px ;
@@ -272,10 +273,9 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .top_serv_card{
     position: relative;
-    left: 28%;
     border: 5px solid #E57222;
     border-radius: 100%;
-    margin: 20px;
+    left: 26%;
     padding: 20px;
     max-width: 120px
     
@@ -310,6 +310,51 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 .serv_p{
     text-align: center;
     color: #575655;
+}
+
+
+.top_maneger{
+    padding-top: 120px;
+}
+
+.main_time{
+    text-align: center;
+    padding: 50px 0 100px 0;
+}
+.main_time h1{
+    font-size: 40px;
+    padding-bottom: 10px;
+}
+.photo{
+    background-color: #575655;
+    width: 125px;
+    height: 125px;
+    border-radius: 50%;
+    margin: 20px auto;
+    overflow: hidden;
+    border: 3px solid #E57222;
+    
+}
+.time_card {
+    display: flex;
+
+}
+.card_bott{
+    padding-top: 30px;
+}
+.meneger_card{
+    margin: 0 20px;
+}
+
+.name{
+    font-size: 20px;
+}
+.position{
+    font-size: 16px;
+    padding-bottom: 13px;
+}
+.about_position{
+    font-size: 14px;
 }
 
 
@@ -503,7 +548,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         grid-template-columns: repeat(1, 1fr);
     }
     .top_serv_card{
-        left: 43%;
+        left: 45%;
     }
 
 }
@@ -561,6 +606,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         left: 0;
         width: 100%;
         background-color: rgba(105, 105, 105, 0.87);;
+        backdrop-filter: blur(3px);
         padding: 70px 10px 0px 20px;
         transition: 0.6s;
     }
@@ -601,12 +647,15 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     .top_serv_card{
         left: 41%;
     }
+    .time_card{
+        flex-direction: column;
+    }
 
    
 } 
 @media (max-width:540px) {
         .top_serv_card{
-            left: 30%;
+           left: 35%;
         }
         .line{
             left: 37%;
@@ -614,7 +663,7 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
 @media (max-width:390px ) {
         .top_serv_card{
-            left: 30%;
+         left: 30%;
         }
         .line{
             left: 30%;
