--- a/css/contact.css
+++ b/css/contact.css
@@ -1,21 +1,24 @@
 .serv-container{
     display: flex;
     margin-top: 30px;
+    padding-bottom: 50px;
+    justify-content: center;
+    align-items: center;
 }
 .contact{
     margin: 0 auto;
     margin-top: 120px;
 }
-.services img{
-    width: 100%;
-    height: auto;
-}
-.serv-img-container{
-    width: 58%;
+
+.serv-img-container iframe{
+    width:600px; 
+    height:450px;
+    border: 3px solid #E57222;
+    border-radius: 8px;
 }
 .serv-text{
-    width: 42%;
     margin-left: 3%;
+    text-align: center;
 }
 .serv-text p{
     margin-bottom: 35px;
@@ -33,4 +36,24 @@
 .services h4{
     font-size: 20px;
     margin-bottom: 10px;
+}
+
+@media (max-width:1000px) {
+    .serv-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media (max-width:640px) {
+    .serv-img-container iframe{
+        width:400px; 
+        height:350px;
+    }
+}
+@media (max-width:440px) {
+    .serv-img-container iframe{
+        width:300px; 
+        height:350px;
+    }
 }
