--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -26,6 +26,9 @@
     margin: 20px;
     text-align: justify;
 }
+.line-text{
+    margin: 50px;
+}
 .line-img img{
     border: 3px solid #E57222;
     border-radius: 8px;
@@ -43,12 +46,39 @@
 
 }
 
+.partner{
+    text-align: center;
+}
+.partner h2{
+    font-size: 40px;
+}
+
+.part_firms{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+
+
 @media (max-width:800px) {
     .add-line{
         flex-direction: column;
     }
     .add-line-right{
         flex-direction: column-reverse;
+    }
+    .line-text{
+        margin: 0px;
+    }
+}
+@media (max-width:720px) {
+    .part_firms{
+        flex-direction: column;
+    }
+    .firm{
+        padding: 15px;
     }
 }
 @media (max-width:530px) { 
