--- a/css/certificate.css
+++ b/css/certificate.css
@@ -1,7 +1,7 @@
 .menu_certific{
     margin: 130px 30px 0px 30px;
     text-align: center;
-    padding: 20px 0 20px 0;
+    padding: 20px 10px 20px 10px;
     font-size: 22px;
     border: 2px solid #E57222 ;
     border-radius: 8px;
@@ -39,4 +39,10 @@
 }
 .li_menu{
     margin-top: 5px;
+}
+
+@media (max-width:660px) {
+    .menu_certific{
+        font-size: 19px;
+    }
 }
